@@ -1,5 +1,11 @@
 2015-11-04  Ola Jeppsson  <ola@adapteva.com>
 
+	* multicore/e-lib-inl.h: Minimal inline implementation of
+	e-lib.
+	* multicore/multicore.exp: New file for multicore C tests.
+
+2015-11-04  Ola Jeppsson  <ola@adapteva.com>
+
 	* 64bmode/64bmode.exp: Rename from 64bmode/allinsn.exp. Save
 	and restore global variables.
 	* allinsn.exp: Save and restore global variables.
